# saloon

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
app/: package.json  pnpm-lock.yaml
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src/lib/: Splash.svelte  api.ts  auth.ts  channel-setup.ts  crypto.ts  errors.ts  lobby-ws.ts  persistence.ts  session.ts  signaling.ts  stores.ts  types.ts  webrtc.ts
app/src/lib/webrtc/: audio-player.ts  index.ts  media-devices.ts  peer-manager.ts  stream-classifier.ts  voice-activity.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/channel/[id]/: +page.svelte
app/src/routes/lobby/: +page.svelte
app/src/routes/username/: +page.svelte
docs/: PROJECT_IDEA.md
server/: .env.example  main.py  pyproject.toml
server/.docker/: .env.example  DEPLOY.md  Dockerfile  compose.prod.yml  compose.yml
server/.docker/coturn/: turnserver.conf  turnserver.dev.conf  turnserver.prod.conf
server/src/: __init__.py  auth.py  channels.py  config.py  models.py  rate_limit.py  signaling.py  users.py  wordlists.py
server/src/core/: auth.py  channels.py  config.py  crypto.py  deps.py  exceptions.py  middleware.py  models.py  rate_limit.py  state.py  username.py
server/src/routers/: channels.py  users.py  ws.py
server/src/service/: channels.py  signaling.py  users.py  ws.py
