[project]
name = "saloon"
version = "0.1.0"
description = "Saloon — privacy-focused voice/video communication server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "argon2-cffi>=23.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "websockets>=13.0",
]

[project.scripts]
saloon-server = "server.main:main"

